# VKStraction

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  a  build
.cache/clangd/index/: main.cpp.DD8A711D43632320.idx  types.cpp.5CEC3C9FA1C1800C.idx  types.hpp.788B75CDBDDCB55F.idx  vkstraction.cpp.A85FBF06ECFC15EB.idx  vkstraction.hpp.1CFF9D63DCB4C18A.idx  window.cpp.74594CC163BACF79.idx  window.hpp.0A98B278908C6024.idx
cmake/: shaders.cmake
include/: a  builder.hpp  command.hpp  debug.hpp  device.hpp  engine.hpp  error.hpp  graphicsqueue.hpp  swapchain.hpp  types.hpp  util.hpp  validationlayer.hpp  vertex.hpp  vkstraction.hpp  vulkancontext.hpp  window.hpp
src/: builder.cpp  command.cpp  debug.cpp  device.cpp  engine.cpp  graphicsqueue.cpp  main.cpp  swapchain.cpp  types.cpp  util.cpp  validationlayer.cpp  vertex.cpp  vkstraction.cpp  vulkancontext.cpp  window.cpp
